--- a/.editorconfig
+++ b/.editorconfig
@@ -4,3 +4,10 @@ indent_size = 4
 end_of_line = lf
 charset = utf-8
 insert_final_newline = true
+
+[{*.sh,Makefile}]
+indent_style = tab
+tab_width = 4
+end_of_line = lf
+charset = utf-8
+insert_final_newline = true
