--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,16 @@
-[{*.coffee,Cakefile}]
-indent_style = space
-indent_size = 4
+[*]
 end_of_line = lf
 charset = utf-8
 insert_final_newline = true
 
+[{*.R,*.js,*.cjs,*.mjs,Jakefile}]
+indent_style = space
+indent_size = 2
+
+[{*.py,*.coffee,Cakefile}]
+indent_style = space
+indent_size = 4
+
 [{*.sh,Makefile}]
 indent_style = tab
 tab_width = 4
-end_of_line = lf
-charset = utf-8
-insert_final_newline = true
