--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/node": "^18.7.13",
     "coffeescript": "^2.7.0",
     "jake": "^10.8.5",
-    "minimist": "^1.2.6"
+    "minimist": "^1.2.6",
+    "mongodb": "^4.10.0"
   }
 }
