--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "coffeescript": "^2.7.0",
     "jake": "^10.8.5",
     "minimist": "^1.2.6",
-    "mongodb": "^4.10.0"
+    "mongodb": "^4.10.0",
+    "typescript": "^4.8.4"
   }
 }
