chore: add ext variable

--- a/src/sh/Makefile
+++ b/src/sh/Makefile
@@ -1,12 +1,13 @@
 bin_dir := $(abspath $(CURDIR)/../../bin)
-src_files := $(wildcard *.sh)
+ext := .sh
+src_files := $(wildcard *$(ext))
 links := $(shell cat links.txt)
 
 get_name = $(shell grep $(1) links.txt | cut -d : -f 2)
-rename = $(subst _,-,$(subst .sh,,$(1)))
+rename = $(subst _,-,$(subst $(ext),,$(1)))
 
 name_out = $(if $(findstring $(1), $(links)), $(call get_name, $(1)), $(call rename, $(1)))
-name_src = $(if $(shell grep $(1) links.txt), $(shell grep $(1) links.txt | cut -d : -f 1), $(patsubst %,%.sh,$(subst -,_,$(1))))
+name_src = $(if $(shell grep $(1) links.txt), $(shell grep $(1) links.txt | cut -d : -f 1), $(patsubst %,%$(ext),$(subst -,_,$(1))))
 
 file_names = $(foreach file, $(src_files), $(call name_out, $(file)))
 
@@ -24,7 +25,7 @@ $(bin_dir):
 
 ../../$(notdir $(bin_dir)): $(bin_dir)
 
-$(bin_dir)/%: %.sh | $(bin_dir)
+$(bin_dir)/%: %$(ext) | $(bin_dir)
 	ln -s $< $@
 
 $(out_files):
