chore: change variable names and operator

--- a/src/r/Makefile
+++ b/src/r/Makefile
@@ -1,7 +1,7 @@
-LITTLER_BIN = system.file("bin", "r", package = "littler")
-LITTLER_LINK = "${HOME}/.local/bin/r"
-ARGS = "-s", $(LITTLER_BIN), $(LITTLER_LINK)
-COMMAND = system2("ln", args = c($(ARGS)))
+littler_bin := system.file("bin", "r", package = "littler")
+littler_link := "${HOME}/.local/bin/r"
+args := "-s", $(littler_bin), $(littler_link)
+command := system2("ln", args = c($(args)))
 
 EEXIST = "\n\x1b[31merror:\x1b[0m file $$(which r) already exists\n"
 
@@ -15,7 +15,7 @@ link:
 	if test -e "${HOME}/.local/bin/r"; then \
 	printf $(EEXIST); \
 	exit 1; fi
-	Rscript -e '$(COMMAND)'
+	Rscript -e '$(command)'
 	printf "\n\x1b[32msuccess:\x1b[0m symbolic link created at $$(which r)\n"
 
 lint:
