--- a/src/rust/Makefile
+++ b/src/rust/Makefile
@@ -3,9 +3,9 @@ bin_dir := $(abspath ../../bin)
 src_files := $(wildcard *.rs)
 out_files := $(subst _,-,$(patsubst %.rs,$(bin_dir)/%,$(src_files)))
 
-name_src = $(subst -,_,$(patsubst $(bin_dir)/%,%.rs,$(1)))
+name_src = $(patsubst %,%.rs,$(subst -,_,$(notdir $(1))))
 
-link: $(out_files)
+link: $(out_files) | $(bin_dir)
 
 unlink:
 	rm -f $(out_files)
@@ -15,7 +15,18 @@ $(bin_dir):
 		mkdir $(bin_dir); \
 	fi
 
-$(out_files): | $(bin_dir)
-	rustc -o $@ $(call name_src, $@)
+$(out_files): build
+	if test $@ -ot $(call name_src, $@); \
+		then cp target/release/$(notdir $@) $@; \
+	fi
 
-.PHONY: link unlink
+build:
+	cargo build --release
+
+clean:
+	cargo clean
+
+debug:
+	cargo build
+
+.PHONY: link unlink build clean debug
