--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 comfy-table = "6.1.3"
 clap = "4.0.32"
 regex = "1.7.0"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1", features = ["full"] }
 
 [[bin]]
 name = "list-containers"
