--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -11,6 +11,7 @@ clap = "4.0.32"
 regex = "1.7.0"
 reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
+chrono = "0.4.23"
 
 [[bin]]
 name = "list-containers"
