feat: print clock icon according to current time

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -20,3 +20,7 @@ path = "list_containers.rs"
 [[bin]]
 name = "get-option"
 path = "get_option.rs"
+
+[[bin]]
+name = "show-clock-icon"
+path = "show_clock_icon.rs"
