chore: change variable name
Reassign variable MAKE with simple expansion, instead of using another
name.

--- a/src/node/Makefile
+++ b/src/node/Makefile
@@ -1,7 +1,7 @@
 SHELL       = node
 .SHELLFLAGS = -e
 
-define RULE
+define MAKE :=
 	function handleRecipe(err, stdout, stderr) {
 		if (err) {
 			console.error(stderr.trim());
