--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ indent_size = 2
 indent_style = space
 indent_size = 4
 
-[{*.sh,Makefile}]
+[{*.c,*.sh,Makefile}]
 indent_style = tab
 tab_width = 4
