chore: change symlink creation recipe

--- a/src/python/Makefile
+++ b/src/python/Makefile
@@ -103,8 +103,7 @@ $(BIN_DIR):
 
 $(TARGET_FILES): | $(BIN_DIR)
 	$(OS)
-	os.chdir("$(BIN_DIR)")
-	os.symlink("../src/python/$(call GET_SRC,$(@F))", "$(@F)")
+	os.symlink("../src/python/$(call GET_SRC,$(@F))", "$@")
 
 .PHONY: all install link unlink
 
