--- a/src/c/Makefile
+++ b/src/c/Makefile
@@ -34,6 +34,12 @@ $(LIB_DIR):
 $(BIN_DIR)/xinitrc: $(LIB_DIR)/main.o $(LIB_DIR)/run.o
 	@$(CC) $(CFLAGS) -o $@ $^
 
+# volume: volume.c
+# 	$(CC) -o $@ $^ -lm -lasound
+
+notify-me: notify_me.c
+	$(CC) -I/usr/include/gdk-pixbuf-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/glib-2.0 -o $@ $^ -lnotify -lgobject-2.0
+
 .PHONY: link unlink
 
 .SILENT: unlink $(TARGET_FILES)
